--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -13,7 +13,7 @@
         <input type="text" name="username" value="{{ user.username }}" required>
 
         <label for="email">Email:</label>
-        <input type="email" name="email" value="{{ user.email }}" required>
+        <input type="email" name="email" value="{{ user.email }}" >
 
         <button type="submit">Update Account Einstellungen</button>
     </form>
