--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     <!--Titel-->
     <title>{% block title %}Adress-App{% endblock %}</title>
     <!--Link welcher auf stylesheet verweist-->
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css', _external=True) }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css', _external=True, _scheme='https') }}">
 </head>
 <body>
     <!--wenn flash message bei Aktion auftritt wird Flash Message wiedergeben-->
